log/build_2025-05-24_00-18-01/battery_monitor/stderr.log
  File "/home/jr-machine/ros2_ws_battery/install/battery_monitor/lib/python3.10/site-packages/battery_monitor/battery_subscriber.py", line 14
    ))
     ^
SyntaxError: unmatched ')'

